Update 'b8g4avzie-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:b557ef94c8c9842bea921384cdf9d166ff63be3c@sha256:710860ba5dd87cec4b0ed37564b8c9415f8ef19ee3b34c67891759fd44bb54dc

--- a/components/b8g4avzie-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/b8g4avzie-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: b8g4avzie-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:b557ef94c8c9842bea921384cdf9d166ff63be3c@sha256:710860ba5dd87cec4b0ed37564b8c9415f8ef19ee3b34c67891759fd44bb54dc
+          name: container-image
